# zmanim_api

./: .codecov.yaml  .gitignore  Dockerfile  Dockerfile_armv7  Pipfile  README.md  better_exceptions.py  messages.pot  pyproject.toml  uvicorn_logger.json
.github/workflows/: ci.yaml  ci_for_arm7.yaml  main.yaml  tests.yaml
test/: consts.py  pesach.http  test_api_helpers.py  test_main.py  test_utils.py
test/test_engine/: test_fasts.py  test_holiday.py  test_rosh_chodesh.py  test_shabbat.py  test_yomtov.py
test/test_routers/: test_errors.py  test_main_router.py
zmanim_api/: api_helpers.py  app.py  helpers.py  localized_texts.py  main.py  models.py  molad.db  openapi_desctiptions.py  settings.py  test.py  utils.py  validators.py
zmanim_api/api/: daf_yomi.py  holidays.py  localized_texts.py  molad.db  ou_downloader.py  rosh_chodesh.py  shabbos.py  utils.py  zmanim.py  zmanimm.py
zmanim_api/api/locales/: base.pot
zmanim_api/api/locales/en/LC_MESSAGES/: zmanim_api.mo  zmanim_api.po
zmanim_api/api/locales/ru/LC_MESSAGES/: zmanim_api.mo  zmanim_api.po
zmanim_api/engine/: daf_yomi.py  holidays.py  rosh_chodesh.py  shabbat.py  shabbos.py  zmanim_module.py
zmanim_api/routers/: main_router.py  openapi_desctiptions.py
