[tool.pdm.build]
includes = ["zmanim_api"]
[project]
name = "zmanim-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Benyamin Ginzburg", email = "benyomin.94@gmail.com"},
]
dependencies = [
    "fastapi==0.104.0",
    "pydantic==2.4.2",
    "uvicorn==0.23.2",
    "arrow==1.2.3",
    "timezonefinder==6.2.0",
    "zmanim==0.3.1",
    "betterlogging==0.2.1",
    "sentry-sdk==1.32.0",
    "tzdata"
]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = {text = "GPL-3.0"}


[tool.pdm.dev-dependencies]
test = [
    "pytest==7.4.2",
    "httpx==0.25.0",
    "coverage==7.2.3",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
tests = "coverage run -m pytest -v test/"
xml = "coverage xml"
